2010-08-31  Andreas Kupries  <andreask@activestate.com>

	* win/tcl.m4: Applied patch by Jeff fixing issues with the
	manifest handling on Win64.
	* win/configure: Regenerated.

2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in: add valgrind target
	* unix/configure, unix/tcl.m4: SHLIB_LD_LIBS='${LIBS}' for OSF1-V*.
	Add /usr/lib64 to set of auto-search dirs. [Bug 1230554]
	(SC_PATH_X): Correct syntax error when xincludes not found.

	* win/Makefile.in (VC_MANIFEST_EMBED_DLL VC_MANIFEST_EMBED_EXE):
	* win/configure, win/configure.in, win/tcl.m4: SC_EMBED_MANIFEST
	macro and --enable-embedded-manifest configure arg added to
	support manifest embedding where we know the magic.  Help prevents
	DLL hell with MSVC8+.

	* generic/tkText.c (DumpLine): s/segPtr->size/currentSize/
	throughout, but particularly in if lineChanged block where segPtr
	may no longer be valid. [Bug 3053347]

2010-08-21  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk*Decls.h:   (regenerated with modified genStubs.tcl)
	* generic/tk*StubInit.c

2010-08-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/ttk/ttkGenStubs.tcl [Patch 3034251] partly: remove
	some more unneeded ifdeffery, as in tcl/tools/genStubs.tcl.
	* generic/tk.h:     Move USE_OLD_IMAGE support after tkDecls.h
	* generic/*Decls.h  (regenerated)
	* generic/ttk/ttkDecls.h

2010-08-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in (%.${OBJEXT}): better implicit rules support

	* unix/configure: regen with ac-2.59
	* unix/configure.in, unix/Makefile.in:
	* unix/tcl.m4 (AIX): remove the need for ldAIX, replace with
	-bexpall/-brtl.  Remove TK_EXP_FILE (export file) and other
	baggage that went with it.  Remove pre-4 AIX build support.

2010-08-11  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.6b2 release.

2010-08-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* license.terms: fix DFARs note for number-adjusted rights clause

2010-08-03  Jeff Hobbs  <jeffh@ActiveState.com>
